2008-03-23  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler-annotation.c, test/test_annotation.rb: implemented
	methods for Poppler::AnnotationText.

	* src/rbpoppler-annotation.c, test/test_annotation.rb: implemented
	methods for Poppler::AnnotationMarkup.

	* src/rbpoppler-annotation.c, test/test_annotation.rb: implemented
	methods for Poppler::Annotation.

	* src/rbpoppler-page.c, src/rbpoppler.h: added POPPLER_COLOR2RVAL
	and POPPLER_COLOR2RVAL_FREE.

	* src/rbpoppler.[ch], src/rbpoppler-private.h: called
	Init_annotation().

	* src/rbpoppler-annotation.c, test/test_annotation.rb: implemented
	Poppler::Annotation#type.

	* src/rbpoppler-page.c:
	- defined missing methods: Poppler::ButtonField#type and
	Poppler::ChoiceField#toggle.
	- defined Poppler::Rectangle#inspect.

	* src/rbpoppler-page.c, test/test_page.rb: defined
	Poppler::AnnotationMapping methods.

	* src/rbpoppler-page.c: added missing static.

	* src/rbpoppler-page.c, test/test_page.rb: implemented
	Poppler::Page#annotation_mapping for 0.7.2.

2008-03-22  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler-page.c (page_get_selection_region),
	test/test_page.rb (TestPage#test_selection_region): implemented
	Poppler::Page#get_selection_region for 0.7.2.

	* src/rbpoppler-page.c, test/test_page.rb
	(TestPage#test_thumbnail_pixbuf): implemented
	Poppler::Page#thumbnail_pixbuf.

	* src/rbpoppler-page.c (page_render_for_printing_generic),
	test/test_page.rb (TestPage#test_render_to_pixbuf_for_printing):
	implemented Poppler::Page#render_for_printing.

2008-03-21  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_page.rb (TestPage#test_render_to_pixbuf): added.

2008-03-20  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler-page.c: implemented Poppler::Page#image.

	* test/poppler-test-utils.rb, test/test_page.rb: added a PDF that
	contains images.

	* test/test_page.rb: added.

	* src/rbpoppler-document.c: implemented Poppler::Document#save_a_copy.

	* test/test_document.rb: added.
